<resources>
    <string name="app_name">Jammin</string>
    <string name="logo">logo</string>
    <string name="emailHint">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back_without_saving">Back without saving</string>
    <string name="useravatar">userAvatar</string>
    <string name="musical_instrument">Musical instrument</string>
    <string name="contact_information_phone_number">Contact information(phone number)</string>
    <string name="profileavatar">profileAvatar</string>
    <string name="save_contact">Save contact</string>
    <string name="go_back">go back</string>
    <string name="save_changes">save changes</string>
    <string name="pic_s_url">Pic\'s URL</string>
    <string name="your_name">Your name</string>
    <string name="your_instrument">Your instrument</string>
    <string name="your_contact_information">Your contact information</string>
    <string name="name">Name</string>
    <string name="instrument">Instrument</string>
    <string name="phone_contact">Phone Contact</string>
    <string name="name">Name</string>
</resources>
