<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.signIn.SignInActivity">

    <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo"/>

    <EditText
            android:id="@+id/emailInput"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/emailHint"
            android:background="@drawable/roundcorner_edit_text"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            tools:targetApi="o"/>

    <EditText
            android:id="@+id/passwordInput"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:background="@drawable/roundcorner_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:targetApi="o"/>

    <Button
            android:id="@+id/forgotPassword"
            style="@style/SignUpStyle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:background="@drawable/roundcorner_button"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
            android:id="@+id/signInButton"
            style="@style/SignUpStyle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/roundcorner_enter_button"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
            android:id="@+id/signUpButton"
            style="@style/SignUpStyle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/roundcorner_button"/>

</LinearLayout>