<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <EditText
            android:id="@+id/createName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:background="@drawable/roundcorner_edit_text"
            android:hint="@string/name"
            android:inputType="text"
            tools:targetApi="o"/>

    <EditText
            android:id="@+id/createEmail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/emailHint"
            android:background="@drawable/roundcorner_edit_text"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            tools:targetApi="o"/>

    <EditText
            android:id="@+id/createPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:background="@drawable/roundcorner_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:targetApi="o"/>

    <EditText
            android:id="@+id/confirmPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/confirm_password"
            android:background="@drawable/roundcorner_edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            tools:targetApi="o"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
            android:id="@+id/registerButton"
            style="@style/SignUpStyle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/roundcorner_enter_button"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
            android:id="@+id/backToTitle"
            style="@style/SignUpStyle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_without_saving"
            android:background="@drawable/roundcorner_button"/>

</LinearLayout>